Fix background being blurry on brave broswer in lobby

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ $primary-700: #f9a91e;
   --theme-background: radial-gradient(transparent, black);
   --theme-card-background: #1e2329;
   --theme-section-background: linear-gradient(135deg, rgba(30, 35, 41, 0.8) 0%, rgba(26, 31, 38, 0.9) 100%);
-  --theme-section-background-transparent: rgba(30, 35, 41, 0.8);
+  --theme-section-background-transparent: rgba(30, 35, 41, 0.95);
   
   // Text colors
   --theme-text: #f4eded;
